fix minor and swaggerize
Former-commit-id: 36f5ae460760d062be9b1bc8c1c7d218f2fb5662
